Taiwan was under a different name in Happy so I manually added it

--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -2057,16 +2057,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "54\n",
       "These are the spotify datsets we should use: ['norway', 'denmark', 'iceland', 'switzerland', 'finland', 'netherlands', 'canada', 'newzealand', 'sweden', 'australia', 'costarica', 'austria', 'unitedstates', 'ireland', 'germany', 'belgium', 'luxembourg', 'unitedkingdom', 'chile', 'brazil', 'czechrepublic', 'argentina', 'mexico', 'singapore', 'uruguay', 'guatemala', 'panama', 'france', 'spain', 'colombia', 'slovakia', 'malaysia', 'ecuador', 'elsalvador', 'poland', 'italy', 'japan', 'lithuania', 'latvia', 'bolivia', 'peru', 'estonia', 'turkey', 'paraguay', 'philippines', 'hungary', 'indonesia', 'dominicanrepublic', 'greece', 'portugal', 'honduras']\n",
-      "51\n",
       "               Country  Happiness.Rank  Happiness.Score\n",
       "0               Norway             1.0            7.537\n",
       "1              Denmark             2.0            7.522\n",
@@ -2118,7 +2116,8 @@
       "47  Dominican Republic            86.0            5.230\n",
       "48              Greece            87.0            5.227\n",
       "49            Portugal            89.0            5.195\n",
-      "50            Honduras            91.0            5.181\n"
+      "50            Honduras            91.0            5.181\n",
+      "51               Spain            34.0            6.403\n"
      ]
     }
    ],
@@ -2144,27 +2143,16 @@
     "        newrow={'Country':happy2017.loc[row,'Country'],'Happiness.Rank':happy2017.loc[row,'Happiness.Rank'],'Happiness.Score':happy2017.loc[row,'Happiness.Score']}\n",
     "        happy=happy.append(newrow, ignore_index=True)\n",
     "\n",
+    "        \n",
+    "#Noticed that Taiwan is referred to as Taiawn Province of China on Happy Index.\n",
+    "newrow={'Country':happy2017.loc[33,'Country'],'Happiness.Rank':happy2017.loc[33,'Happiness.Rank'],'Happiness.Score':happy2017.loc[33,'Happiness.Score']}\n",
+    "happy=happy.append(newrow, ignore_index=True)\n",
+    "\n",
+    "#allspotifydata[allspotifydata['Region']==country])\n",
+    "\n",
     "print('These are the spotify datsets we should use: ' + str(allcountries))\n",
     "print(happy)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://open.spotify.com/track/1KT0xdIjm7t053xByACrrg'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
