--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -2057,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2065,59 +2065,59 @@
      "output_type": "stream",
      "text": [
       "These are the spotify datsets we should use: ['norway', 'denmark', 'iceland', 'switzerland', 'finland', 'netherlands', 'canada', 'newzealand', 'sweden', 'australia', 'costarica', 'austria', 'unitedstates', 'ireland', 'germany', 'belgium', 'luxembourg', 'unitedkingdom', 'chile', 'brazil', 'czechrepublic', 'argentina', 'mexico', 'singapore', 'uruguay', 'guatemala', 'panama', 'france', 'spain', 'colombia', 'slovakia', 'malaysia', 'ecuador', 'elsalvador', 'poland', 'italy', 'japan', 'lithuania', 'latvia', 'bolivia', 'peru', 'estonia', 'turkey', 'paraguay', 'philippines', 'hungary', 'indonesia', 'dominicanrepublic', 'greece', 'portugal', 'honduras']\n",
-      "               Country  Happiness.Rank  Happiness.Score\n",
-      "0               Norway             1.0            7.537\n",
-      "1              Denmark             2.0            7.522\n",
-      "2              Iceland             3.0            7.504\n",
-      "3          Switzerland             4.0            7.494\n",
-      "4              Finland             5.0            7.469\n",
-      "5          Netherlands             6.0            7.377\n",
-      "6               Canada             7.0            7.316\n",
-      "7          New Zealand             8.0            7.314\n",
-      "8               Sweden             9.0            7.284\n",
-      "9            Australia            10.0            7.284\n",
-      "10          Costa Rica            12.0            7.079\n",
-      "11             Austria            13.0            7.006\n",
-      "12       United States            14.0            6.993\n",
-      "13             Ireland            15.0            6.977\n",
-      "14             Germany            16.0            6.951\n",
-      "15             Belgium            17.0            6.891\n",
-      "16          Luxembourg            18.0            6.863\n",
-      "17      United Kingdom            19.0            6.714\n",
-      "18               Chile            20.0            6.652\n",
-      "19              Brazil            22.0            6.635\n",
-      "20      Czech Republic            23.0            6.609\n",
-      "21           Argentina            24.0            6.599\n",
-      "22              Mexico            25.0            6.578\n",
-      "23           Singapore            26.0            6.572\n",
-      "24             Uruguay            28.0            6.454\n",
-      "25           Guatemala            29.0            6.454\n",
-      "26              Panama            30.0            6.452\n",
-      "27              France            31.0            6.442\n",
-      "28               Spain            34.0            6.403\n",
-      "29            Colombia            36.0            6.357\n",
-      "30            Slovakia            40.0            6.098\n",
-      "31            Malaysia            42.0            6.084\n",
-      "32             Ecuador            44.0            6.008\n",
-      "33         El Salvador            45.0            6.003\n",
-      "34              Poland            46.0            5.973\n",
-      "35               Italy            48.0            5.964\n",
-      "36               Japan            51.0            5.920\n",
-      "37           Lithuania            52.0            5.902\n",
-      "38              Latvia            54.0            5.850\n",
-      "39             Bolivia            58.0            5.823\n",
-      "40                Peru            63.0            5.715\n",
-      "41             Estonia            66.0            5.611\n",
-      "42              Turkey            69.0            5.500\n",
-      "43            Paraguay            70.0            5.493\n",
-      "44         Philippines            72.0            5.430\n",
-      "45             Hungary            75.0            5.324\n",
-      "46           Indonesia            81.0            5.262\n",
-      "47  Dominican Republic            86.0            5.230\n",
-      "48              Greece            87.0            5.227\n",
-      "49            Portugal            89.0            5.195\n",
-      "50            Honduras            91.0            5.181\n",
-      "51               Spain            34.0            6.403\n"
+      "                     Country  Happiness.Rank  Happiness.Score\n",
+      "0                     Norway             1.0            7.537\n",
+      "1                    Denmark             2.0            7.522\n",
+      "2                    Iceland             3.0            7.504\n",
+      "3                Switzerland             4.0            7.494\n",
+      "4                    Finland             5.0            7.469\n",
+      "5                Netherlands             6.0            7.377\n",
+      "6                     Canada             7.0            7.316\n",
+      "7                New Zealand             8.0            7.314\n",
+      "8                     Sweden             9.0            7.284\n",
+      "9                  Australia            10.0            7.284\n",
+      "10                Costa Rica            12.0            7.079\n",
+      "11                   Austria            13.0            7.006\n",
+      "12             United States            14.0            6.993\n",
+      "13                   Ireland            15.0            6.977\n",
+      "14                   Germany            16.0            6.951\n",
+      "15                   Belgium            17.0            6.891\n",
+      "16                Luxembourg            18.0            6.863\n",
+      "17            United Kingdom            19.0            6.714\n",
+      "18                     Chile            20.0            6.652\n",
+      "19                    Brazil            22.0            6.635\n",
+      "20            Czech Republic            23.0            6.609\n",
+      "21                 Argentina            24.0            6.599\n",
+      "22                    Mexico            25.0            6.578\n",
+      "23                 Singapore            26.0            6.572\n",
+      "24                   Uruguay            28.0            6.454\n",
+      "25                 Guatemala            29.0            6.454\n",
+      "26                    Panama            30.0            6.452\n",
+      "27                    France            31.0            6.442\n",
+      "28                     Spain            34.0            6.403\n",
+      "29                  Colombia            36.0            6.357\n",
+      "30                  Slovakia            40.0            6.098\n",
+      "31                  Malaysia            42.0            6.084\n",
+      "32                   Ecuador            44.0            6.008\n",
+      "33               El Salvador            45.0            6.003\n",
+      "34                    Poland            46.0            5.973\n",
+      "35                     Italy            48.0            5.964\n",
+      "36                     Japan            51.0            5.920\n",
+      "37                 Lithuania            52.0            5.902\n",
+      "38                    Latvia            54.0            5.850\n",
+      "39                   Bolivia            58.0            5.823\n",
+      "40                      Peru            63.0            5.715\n",
+      "41                   Estonia            66.0            5.611\n",
+      "42                    Turkey            69.0            5.500\n",
+      "43                  Paraguay            70.0            5.493\n",
+      "44               Philippines            72.0            5.430\n",
+      "45                   Hungary            75.0            5.324\n",
+      "46                 Indonesia            81.0            5.262\n",
+      "47        Dominican Republic            86.0            5.230\n",
+      "48                    Greece            87.0            5.227\n",
+      "49                  Portugal            89.0            5.195\n",
+      "50                  Honduras            91.0            5.181\n",
+      "51  Taiwan Province of China            33.0            6.422\n"
      ]
     }
    ],
@@ -2145,7 +2145,7 @@
     "\n",
     "        \n",
     "#Noticed that Taiwan is referred to as Taiawn Province of China on Happy Index.\n",
-    "newrow={'Country':happy2017.loc[33,'Country'],'Happiness.Rank':happy2017.loc[33,'Happiness.Rank'],'Happiness.Score':happy2017.loc[33,'Happiness.Score']}\n",
+    "newrow={'Country':happy2017.loc[32,'Country'],'Happiness.Rank':happy2017.loc[32,'Happiness.Rank'],'Happiness.Score':happy2017.loc[32,'Happiness.Score']}\n",
     "happy=happy.append(newrow, ignore_index=True)\n",
     "\n",
     "#allspotifydata[allspotifydata['Region']==country])\n",
