--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -2197,6 +2197,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#adding the countries we will work with based on the subset below in allcountries. We will use this to subset the first 50 songs below\n",
+    "countries_to_subset = [norway, denmark, denmark, switzerland, finland, \n",
+    "                       netherlands, canada, newzealand, sweden, australia, costarica, austria, \n",
+    "                       unitedstates, ireland, germany, belgium, luxembourg, unitedkingdom, \n",
+    "                       chile, brazil, czechrepublic, argentina, mexico, singapore, uruguay, guatemala,\n",
+    "                       panama, france, spain, colombia, slovakia, malaysia, ecuador, poland, italy, japan\n",
+    "                       ,lithuania, latvia, peru, turkey, paraguay, philippines, hungary, indonesia, portugal, honduras]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Limitations\n",
+    "1) Given we are dealing with a relatively sample of only 2017, albeit with 50 songs per day, drawing conclusions for what type of music a happy or unhappy country listens may not prove out to be as accurate as we would like it to be. We can say, however, that the culture of a country likely does not vary signficantly from one year to another, so the top genres and happy scores may reflect of the country's values to an extent.\n",
+    "\n",
+    "2) Some countries were omitted in order to be able to use the countries in the happiness index and those in our spotify data. In order to draw some observations, we had to find overlap in songs. This may naturally produce bias since some potentially happy countries with potentially signficant relationships to music will completely be overlooked due to availability of data. This concerns mainly the overarching/big picture of happy countries and certain genres being more common.\n",
+    "\n",
+    "3) We are relying on the genre and danceability score for specific songs provided by a dataset. It is possible this dataset contains subjective information to the user, hence the genres and danceability scores may not reflect the names the people of the country would utilize. This metric of genre, further, may be interpreted f"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
